[gd_scene load_steps=10 format=2]

[ext_resource path="res://environment/coin/coin.gd" type="Script" id=1]
[ext_resource path="res://environment/coin/coin_trail.png" type="Texture" id=2]
[ext_resource path="res://environment/coin/coin.png" type="Texture" id=3]
[ext_resource path="res://girl/bg_light_mask.png" type="Texture" id=4]
[ext_resource path="res://sfx/coin.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.0

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 2, 2, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 5.0
anim_speed_random = 0.5
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation", "Emission Shape", "Initial Velocity", "Linear Accel", "Spread", "Trail" ]

[sub_resource type="Animation" id=3]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("coin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 56.0

[node name="coin" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 513
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]

[node name="collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="trail" type="Particles2D" parent="." index="1"]

z_index = 2
emitting = false
amount = 20
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 2
v_frames = 2
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="coin" type="Sprite" parent="." index="2"]

z_index = 3
texture = ExtResource( 3 )
vframes = 2
hframes = 4
_sections_unfolded = [ "Animation", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "cycle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/cycle = SubResource( 3 )
blend_times = [  ]

[node name="search_player" type="Area2D" parent="." index="4"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision_layer = 0
collision_mask = 512
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_lock_": true
}

[node name="search" type="CollisionShape2D" parent="search_player" index="0"]

visible = false
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="light" type="Light2D" parent="." index="5"]

enabled = false
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 0.5
color = Color( 0.960938, 0.808269, 0.446686, 1 )
energy = 0.4
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 4
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 4

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="6"]

visible = false
rect = Rect2( -50, -50, 100, 100 )

[node name="ping" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "sfx"

[connection signal="area_entered" from="." to="." method="_on_coin_area_entered"]

[connection signal="area_entered" from="search_player" to="." method="_on_search_player_area_entered"]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]


